--- a/src/components/styles/appConfiguratorItem/configurator-type-item.scss
+++ b/src/components/styles/appConfiguratorItem/configurator-type-item.scss
@@ -3,9 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 22px;
-    line-height: 26px;
+    font-size: 16px;
+    line-height: 20px;
     font-weight: 700;
+
+    @media (min-width: $tablet-width) {
+        font-size: 22px;
+        line-height: 26px;
+    }
 
     &:hover {
         .configurator-type-item__img-wrapper {
@@ -24,8 +29,12 @@
     }
 
     &__img {
-        height: 250px;
+        height: 125px;
         width: 100%;
         object-fit: cover;
+
+        @media (min-width: $tablet-width) {
+            height: 250px;
+        }
     }
 }
