--- a/src/components/styles/appMain/app-main.scss
+++ b/src/components/styles/appMain/app-main.scss
@@ -1,14 +1,18 @@
 .app-main {
-  margin-bottom: 50px;
   background-image: url('/src/assets/img/bg.jpg');
 
   &__content {
-    margin-top: 64px;
-    margin-bottom: 64px;
-    padding: 40px;
-    // height: 100%;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    padding: 16px;
     display: flex;
     flex-direction: column;
     gap: 32px;
+
+    @media (min-width: $tablet-width) {
+      padding: 40px;
+      margin-top: 64px;
+      margin-bottom: 64px;
+    }
   }
 }
