--- a/src/components/styles/pageHome/app-page-home.scss
+++ b/src/components/styles/pageHome/app-page-home.scss
@@ -1,28 +1,38 @@
 .app-page-home {   
-
 }
 
 .configurator {
     &__section {
         background-color: rgba(255, 255, 255, 0.5);
-        margin-bottom: 32px;
-        border-radius: 32px;
-        padding: 32px;
+        margin-bottom: 16px;
+        border-radius: 16px;
+        padding: 16px;
+
+        @media (min-width: $tablet-width) {
+            margin-bottom: 32px;
+            border-radius: 32px;
+            padding: 32px;
+        }
     }
 
     &__result {
         display: flex;
         flex-direction: column;
-        gap: 32px;
     }
     
     &__result-list {
-        margin-top: 32px;
+        margin-top: 16px;
+        margin-bottom: 16px;
         display: grid;
-        grid-template-columns: repeat(3, 200px);
         grid-template-rows: 1fr;
         justify-content: space-around;
         grid-gap: 20px;
+
+        @media (min-width: $tablet-width) {
+            margin-top: 32px;
+            margin-bottom: 32px;
+            grid-template-columns: repeat(3, 200px);
+        }
     }
 
     &__save {
@@ -36,65 +46,61 @@
     }
 
     &__link {
-        // margin-bottom: 16px;
-        font-size: 24px;
-        line-height: 30px;
+        font-size: 16px;
+        line-height: 20px;
         font-weight: 700;
-        // width: fit-content;
+
+        @media (min-width: $tablet-width) {
+            font-size: 24px;
+            line-height: 30px;
+        }
     }
 
     &__option-title {
-        margin-top: 64px;
-        margin-bottom: 32px;
-        font-size: 24px;
-        line-height: 30px;
+        margin-top: 32px;
+        margin-bottom: 16px;
+        font-size: 16px;
+        line-height: 20px;
         font-weight: 700;
+
+        @media (min-width: $tablet-width) {
+            margin-top: 64px;
+            margin-bottom: 32px;
+            font-size: 24px;
+            line-height: 30px;
+        }
     }
 
     &__title {
         margin-bottom: 32px;
-        font-size: 24px;
-        line-height: 30px;
+        font-size: 16px;
+        line-height: 20px;
         font-weight: 700;
 
         &:last-child {
             margin-bottom: 0;
+        }
+
+        @media (min-width: $tablet-width) {
+            font-size: 24px;
+            line-height: 30px;
         }
     }
 
     &__type-list {
         margin-top: 8px;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr;
         grid-gap: 20px;
+
+        @media (min-width: $tablet-width) {
+            grid-template-columns: repeat(4, 1fr);
+        }
     }
 
     &__type-item {
         cursor: pointer;
-    }
-}
-
-.configurator-result-type {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    &__desc {
-        margin-top: 16px;
-        text-align: center;
-    }
-
-    &__value {
-        font-size: 18px;
-        line-height: 22px;
-        font-weight: 700;
-    }
-
-    &__img {
-        height: 150px;
-        width: 100%;
-        object-fit: cover;
     }
 }
 
@@ -104,26 +110,43 @@
     &__list {
         display: flex;
         flex-direction: column;
-        gap: 16px;
+        gap: 64px;
+
+        @media (min-width: $tablet-width) {
+            gap: 16px;
+        }
     }
 }
 
 .configurator-result-item {
     display: grid;
-    
-    grid-template-columns: 1fr auto;
     align-items: center;
 
-    &__desc {
+    @media (min-width: $tablet-width) {
+        grid-template-columns: 1fr auto;
+    }
 
+    &__controls-wrapper {
+        margin-top: 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        @media (min-width: $tablet-width) {
+            flex-direction: row;
+        }
     }
 
     &__count-wrapper {
-        display: grid;
-        grid-template-columns: auto 50px auto 200px;
+        display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         grid-gap: 32px;
+
+        @media (min-width: $tablet-width) {
+            display: grid;
+            grid-template-columns: auto 50px auto;
+        }
     }
 
     &__controls {
