--- a/src/components/styles/pageHome/app-page-home.scss
+++ b/src/components/styles/pageHome/app-page-home.scss
@@ -1,6 +1,11 @@
 .app-page-home {   
 }
 
+.alert {
+    color: red;
+    text-align: center;
+}
+
 .configurator {
     &__section {
         background-color: rgba(255, 255, 255, 0.5);
@@ -35,6 +40,33 @@
         }
     }
 
+    &__result-type {
+        &--form {
+            grid-row: 1 / 2;
+
+            @media (min-width: $tablet-width) {
+                grid-row: 1 / 2;
+                grid-column: 1 / 2;
+            }
+        }
+        &--programs {
+            grid-row: 2 / 3;
+
+            @media (min-width: $tablet-width) {
+                grid-row: 1 / 2;
+                grid-column: 2 / 3;
+            }
+        }
+        &--spots {
+            grid-row: 3 / 4;
+            
+            @media (min-width: $tablet-width) {
+                grid-row: 1 / 2;
+                grid-column: 3 / 4;
+            }
+        }
+    }
+
     &__save {
         padding: 16px;
         text-transform: uppercase;
@@ -43,6 +75,11 @@
         border: 1px solid lightgray;
         background-color: rgb(254, 255, 255);
         border-radius: 8px;
+        transition: all 0.5s;
+
+        &:hover {
+            background-color: rgba(150, 150, 150, 0.5);
+        }
     }
 
     &__link {
