--- a/src/components/styles/pageHome/app-page-home.scss
+++ b/src/components/styles/pageHome/app-page-home.scss
@@ -86,10 +86,17 @@
         font-size: 16px;
         line-height: 20px;
         font-weight: 700;
+        color: gray;
+        transition: all 0.5s;
 
         @media (min-width: $tablet-width) {
             font-size: 24px;
             line-height: 30px;
+        }
+
+        &:hover {
+            opacity: 0.5;
+            transition: all 0.5s;
         }
     }
 
